; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-outputs/extr_ftl-stream.c_send_video_header.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-outputs/extr_ftl-stream.c_send_video_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ftl_stream = type { i32* }
%struct.encoder_packet = type { i32, i32, i32, i32, i32, i32 }

@OBS_ENCODER_VIDEO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ftl_stream*, i32)* @send_video_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @send_video_header(%struct.ftl_stream* %0, i32 %1) #0 {
  %3 = alloca %struct.ftl_stream*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.encoder_packet, align 4
  store %struct.ftl_stream* %0, %struct.ftl_stream** %3, align 8
  store i32 %1, i32* %4, align 4
  %10 = load %struct.ftl_stream*, %struct.ftl_stream** %3, align 8
  %11 = getelementptr inbounds %struct.ftl_stream, %struct.ftl_stream* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  store i32* %12, i32** %5, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = call i32* @obs_output_get_video_encoder(i32* %13)
  store i32* %14, i32** %6, align 8
  %15 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %9, i32 0, i32 0
  store i32 1, i32* %15, align 4
  %16 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %9, i32 0, i32 1
  store i32 1, i32* %16, align 4
  %17 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %9, i32 0, i32 2
  store i32 0, i32* %17, align 4
  %18 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %9, i32 0, i32 3
  store i32 0, i32* %18, align 4
  %19 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %9, i32 0, i32 4
  %20 = load i32, i32* %4, align 4
  store i32 %20, i32* %19, align 4
  %21 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %9, i32 0, i32 5
  %22 = load i32, i32* @OBS_ENCODER_VIDEO, align 4
  store i32 %22, i32* %21, align 4
  %23 = load i32*, i32** %6, align 8
  %24 = call i32 @obs_encoder_get_extra_data(i32* %23, i32** %7, i64* %8)
  %25 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %9, i32 0, i32 2
  %26 = load i32*, i32** %7, align 8
  %27 = load i64, i64* %8, align 8
  %28 = call i32 @obs_parse_avc_header(i32* %25, i32* %26, i64 %27)
  %29 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %9, i32 0, i32 3
  store i32 %28, i32* %29, align 4
  %30 = load %struct.ftl_stream*, %struct.ftl_stream** %3, align 8
  %31 = call i64 @send_packet(%struct.ftl_stream* %30, %struct.encoder_packet* %9, i32 1)
  %32 = icmp sge i64 %31, 0
  %33 = zext i1 %32 to i32
  ret i32 %33
}

declare dso_local i32* @obs_output_get_video_encoder(i32*) #1

declare dso_local i32 @obs_encoder_get_extra_data(i32*, i32**, i64*) #1

declare dso_local i32 @obs_parse_avc_header(i32*, i32*, i64) #1

declare dso_local i64 @send_packet(%struct.ftl_stream*, %struct.encoder_packet*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
